made user signin

--- a/app/views/user_show/signup.html.erb
+++ b/app/views/user_show/signup.html.erb
@@ -1,40 +1,39 @@
-<%= form_for @user do |f|%>
+<%= form_for @user,:url => {:controller => 'user_show', :action => 'update'} do |f|%>
+  <link rel="stylesheet" href="signup.css">
+  <html>
+    <head>
+      <title>Practice</title>
+    </head>
 
-<link rel="stylesheet" href="signup.css">
-<html>
+    <body>
+      <h1 class="Titlestr">Sign up</h1>
+      <h2 class="Titlestr">さようなら世界</h2>
+      <h3 class="Titlestr">~ この世の終わりに名前を残す ~</h3>
+      <div class="box">
+        <div class="Impact">Input Your Name</div>
+        <center>
+          <td>
+          </br>
+            <!--<input type="text" name="InputName" size="30" maxlength="20"></input>-->
+            <%=f.text_field :username, :size=>"30"%>
+          </td>
+        </center>
+      </div>
 
-  <head>
-    <title>Practice</title>
-  </head>
+      <br>
 
-  <body>
-    <h1 class="Titlestr">Sign up</h1>
-    <h2 class="Titlestr">さようなら世界</h2>
-    <h3 class="Titlestr">~ この世の終わりに名前を残す ~</h3>
-    <div class="box">
-      <div class="Impact">Input Your Name</div>
-      <center>
-        <td>
-          <!--<input type="text" name="InputName" size="30" maxlength="20"></input>-->
-          <%=f.text_field :username%>
-        </td>
-      </center>
-    </div>
-
-    <br>
-
-    <div class="box">
-      <div class="Impact">Write about yourself</div>
-      <center>
-        <td class="center">
-          <!--<input type="text" name="InputComment" size="20" maxlength="100"></input>-->
-          <%=f.text_field :comment%>
-          <%=f.text_field :userid%>
-        </td>
-      </center>
-    </div>
-  </body>
-
-</html>
-<%=f.submit%>
+      <div class="box">
+        <div class="Impact">Write about yourself</div>
+        <center>
+          <td class="center">
+            <!--<input type="text" name="InputComment" size="20" maxlength="100"></input>-->
+          </br>
+            <%=f.text_area :comment, :size=>"70x3"%></br>
+            <%=f.text_field :userid,:size=>20 %>
+          </td>
+        </center>
+      </div>
+      <%=f.submit "登録"%>
+    </body>
+  </html>
 <%end%>
