--- a/app/views/user_show/kari.css
+++ b/app/views/user_show/kari.css
@@ -1,21 +1,41 @@
 body {
+  background: radial-gradient(#FFFFFF, #d56d2b);
+}
+
+div.box {
+  margin-top: 20;
+  width: 80%;
+  height: 100px;
+  font-size: 30px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #cccccc;
+  border: 5px solid grey;
+  margin: 0 auto;
+}
+
+input[type=text][name="InputName"] {
+  margin-top: 10;
+  width: 85%;
+  height: 50px;
+  color: rgb(0, 0, 0);
+  font-size: 40;
+}
+
+input[type=text][name="InputComment"] {
+  margin-top: 10;
+  width: 85%;
+  height: 50px;
+  color: rgb(0, 0, 0);
+  font-size: 40;
+}
+
+.Titlestr {
   text-align: center;
-  justify-content: center;
-  align-items: center;
+  font-family: Noto Sans CJK JP Thin, Charcoal;
 }
 
-.mdl-layout {
-  align-items: center;
-  justify-content: center;
-}
-
-.mdl-layout__content {
-  padding: 24px;
-  flex: none;
-}
-
-.mdl-button {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-right: 10px;
+div.Impact {
+  font-family: Noto Sans CJK JP Thin, Charcoal;
+  text-align: center;
 }
