--- a/app/views/user_show/signup.css
+++ b/app/views/user_show/signup.css
@@ -1,41 +1,35 @@
-body {
-  background: radial-gradient(#FFFFFF, #d56d2b);
+body{
+    position: relative;
+    background-color: #b0bec5;
+}
+.demo-card-wide {
+  height: 200px;
+ // outline: limegreen 10px solid;
 }
 
-div.box {
-  margin-top: 20;
-  width: 80%;
-  height: 100px;
-  font-size: 30px;
-  margin: 10px;
-  padding: 10px;
-  background-color: #cccccc;
-  border: 5px solid grey;
-  margin: 0 auto;
+
+.demo-card-wide > .mdl-card__title {
+  color: #fff;
+  height: 70px;
+  background-color:indigo;
 }
 
-input[type=text][name="InputName"] {
-  margin-top: 10;
-  width: 85%;
-  height: 50px;
-  color: rgb(0, 0, 0);
-  font-size: 40;
+.demo-card-wide.mdl-card {
+  width: 400px;
+  height: 400px;
 }
-
-input[type=text][name="InputComment"] {
-  margin-top: 10;
-  width: 85%;
-  height: 50px;
-  color: rgb(0, 0, 0);
-  font-size: 40;
+.mdl-card__title-text {
+  position: relative;
+  top: 6px;
 }
-
-.Titlestr {
+.allchange{
   text-align: center;
-  font-family: Noto Sans CJK JP Thin, Charcoal;
-}
-
-div.Impact {
-  font-family: Noto Sans CJK JP Thin, Charcoal;
-  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 30%;
+  height: 50%;
 }
