--- a/app/views/user_show/signup.html.haml
+++ b/app/views/user_show/signup.html.haml
@@ -1,23 +1,33 @@
+!!!
+%meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+/
 %link{:rel => 'stylesheet', :href => 'https://fonts.googleapis.com/icon?family=Material+Icons'}
 %link{:rel => 'stylesheet', :href => 'https://code.getmdl.io/1.3.0/material.indigo-pink.min.css'}
 %script{:defer=>'defer',:src=>'https://code.getmdl.io/1.3.0/material.min.js'}
-%link{:rel=>'stylesheet',:href=>'kari.css'}
+%link{:rel=>'stylesheet',:href=>'signup.css'}
 %html
-= form_for @user, :url => {:controller => 'user_show', :action => 'update'} do |f|
-  .md1-containerflex
-    .md1-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-      = f.text_field :username,:class=>'mdl-textfield__input',:type => "text",:id=>'un'
-      %label{:class=>'mdl-textfield__label'} Username...
-    %br
-    .md1-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-      = f.text_field :comment,:class=>'mdl-textfield__input',:type => "text",:id=>'co'
-      %label{:class=>'mdl-textfield__label'} Comment...
-    %br
-    .md1-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-      = f.text_field :userid,:class=>"mdl-textfield__input", :type=>"text", :pattern=>"-?[0-9]*(\.[0-9]+)?",:id=>'ui'
-      %label{:class=>'mdl-textfield__label'} Userid...
-    %br
-      = f.submit 'Sign up',:class=>'mdl-button.mdl-js-button mdl-button--raised'
+  %body
+    .allchange
+      .demo-card-wide.mdl-card.mdl-shadow--2dp
+        .mdl-card__title
+          .mdl-card__title-text
+            Sign up
+        .mdl-card__supporting-text
+          Please let me know about you!
+        = form_for @user, :url => {:controller => 'user_show', :action => 'update'} do |f|
+          .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            = f.text_field :username,:class=>'mdl-textfield__input',:type => "text",:id=>'un'
+            %label{:class=>'mdl-textfield__label'} Username...
+          %br
+          .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            = f.text_field :comment,:class=>'mdl-textfield__input',:type => "text",:id=>'co'
+            %label{:class=>'mdl-textfield__label'} Comment...
+          %br
+          .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            = f.text_field :userid,:class=>"mdl-textfield__input", :type=>"text", :pattern=>"-?[0-9]*(\.[0-9]+)?",:id=>'ui'
+            %label{:class=>'mdl-textfield__label'} Userid...
+          %br
+            = f.submit 'Sign up',:class=>'mdl-button.mdl-js-button mdl-button--raised'
     /= f.text_field :username, :size=>'30'
     /= f.text_area :comment, :size=>
   /<%=f.text_field :username, :size=>"30"%>
