背景をオレンジにした

--- a/app/views/user_show/signup.css
+++ b/app/views/user_show/signup.css
@@ -1,7 +1,9 @@
 body{
     position: relative;
-    background-color: #b0bec5;
+    // background-color: #b0bec5;
+    background: radial-gradient(#FFFFFF, #d56d2b);
 }
+
 .demo-card-wide {
   height: 200px;
  // outline: limegreen 10px solid;
