--- a/app/views/user_show/user_show.html.erb
+++ b/app/views/user_show/user_show.html.erb
@@ -3,4 +3,5 @@
   <li> userid : <%= @user[:userid] %></li>
   <li> username : <%= @user[:username] %></li>
   <li> comment : <%= @user[:comment] %></li>
+  <li>password:<%=@user[:password]%></li>
 </p>
