--- a/app/views/user_show/signup.css
+++ b/app/views/user_show/signup.css
@@ -1,30 +1,34 @@
-body{
-    position: relative;
-    // background-color: #b0bec5;
-    background: radial-gradient(#FFFFFF, #d56d2b);
+body {
+  position: relative; // background-color: #b0bec5;
+  background: radial-gradient(#9e46d4, #491594);
 }
 
 .demo-card-wide {
-  height: 200px;
- // outline: limegreen 10px solid;
+  height: 200px; // outline: limegreen 10px solid;
 }
 
-
-.demo-card-wide > .mdl-card__title {
+.demo-card-wide>.mdl-card__title {
   color: #fff;
   height: 70px;
-  background-color:indigo;
+  background-color: indigo;
 }
 
 .demo-card-wide.mdl-card {
   width: 400px;
   height: 400px;
 }
+
 .mdl-card__title-text {
   position: relative;
   top: 6px;
 }
-.allchange{
+
+.mdl-card {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.allchange {
   text-align: center;
   position: absolute;
   top: 0;
