--- a/app/views/user_show/signup.html.haml
+++ b/app/views/user_show/signup.html.haml
@@ -20,14 +20,18 @@
             %label{:class=>'mdl-textfield__label'} Username...
           %br
           .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-            = f.text_field :comment,:class=>'mdl-textfield__input',:type => "text",:id=>'co'
+            = f.text_field :comment,:class=>'mdl-textfield__input',:type => "text",:id=>'co',:maxlength=>'60'
             %label{:class=>'mdl-textfield__label'} Comment...
           %br
           .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-            = f.text_field :userid,:class=>"mdl-textfield__input", :type=>"text", :pattern=>"-?[0-9]*(\.[0-9]+)?",:id=>'ui'
-            %label{:class=>'mdl-textfield__label'} Userid...
+            = f.password_field :password,:class=>'mdl-textfield__input',:type => "text",:minlength=>'6',:maxlength=>'30'
+            %label{:class=>'mdl-textfield__label'} Password...
           %br
-            = f.submit 'Sign up',:class=>'mdl-button.mdl-js-button mdl-button--raised'
+          .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+            = f.password_field :password_confirmation,:class=>'mdl-textfield__input',:type => "text",:minlength=>'6',:maxlength=>'30'
+            %label{:class=>'mdl-textfield__label'} Password Confirmation...
+          %br
+          = f.submit 'Sign up',:class=>'mdl-button.mdl-js-button mdl-button--raised'
     /= f.text_field :username, :size=>'30'
     /= f.text_area :comment, :size=>
   /<%=f.text_field :username, :size=>"30"%>
