--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -15,13 +15,14 @@
       %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000"} Home
       %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000/show/0"} Profile
       %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000/signup"} Signup
-
+      %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000/login"} Login
   .mdl-layout__drawer
     .mdl-layout-title Menu
     .mdl-navigation
       %a{:class=>'mdl-navigation__link leftbar',:href=>"http://localhost:3000"} Home
       %a{:class=>'mdl-navigation__link leftbar',:href=>"http://localhost:3000/show/0"} Profile
       %a{:class=>'mdl-navigation__link leftbar',:href=>"http://localhost:3000/signup"} Signup
+      %a{:class=>'mdl-navigation__link leftbar',:href=>"http://localhost:3000/login"} Login
 
   %main{:class=>'mdl-layout__content' }
     .page-content
