--- a/app/views/user_show/signup.html.haml
+++ b/app/views/user_show/signup.html.haml
@@ -4,7 +4,9 @@
 %link{:rel => 'stylesheet', :href => 'https://fonts.googleapis.com/icon?family=Material+Icons'}
 %link{:rel => 'stylesheet', :href => 'https://code.getmdl.io/1.3.0/material.indigo-pink.min.css'}
 %script{:defer=>'defer',:src=>'https://code.getmdl.io/1.3.0/material.min.js'}
-%link{:rel=>'stylesheet',:href=>'signup.css'}
+/%link{:rel=>'stylesheet',:href=>'/assets/stylesheets/signup.css'}
+
+= stylesheet_link_tag "signup", :media => "all"
 %html
   %body
     .allchange
