--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -14,8 +14,7 @@
       .mdl-layout-spacer
       .mdl-navigation.mdl-layout--large-screen-only
         %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000"} Home
-        - userid= current_user
-        %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000/show/#{userid}"} Profile
+        %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000/show/#{@userid}"} Profile
         %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000/signup"} Signup
         %a{:class=>'mdl-navigation__link rightbar',:href=>"http://localhost:3000/login"} Login
     .mdl-layout__drawer
