--- a/app/assets/stylesheets/user_show.css
+++ b/app/assets/stylesheets/user_show.css
@@ -1,7 +1,28 @@
 body {
+  position: relative;
   background: #c4608d;
+}
+
+.demo-card-wide.mdl-card {
+  height: 65%
 }
 
 .all {
   background-color: #c4608d;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  height: 50%;
+}
+
+.mdl-card__actions.mdl-card--border {
+  text-align: left;
+}
+
+.mdl-list__item-primary-content {
+  font-size: 120%;
 }
