--- a/app/views/user_show/user_show.html.haml
+++ b/app/views/user_show/user_show.html.haml
@@ -5,14 +5,20 @@
 %link{:rel => 'stylesheet', :href => 'https://code.getmdl.io/1.3.0/material.indigo-pink.min.css'}
 %script{:defer=>'defer',:src=>'https://code.getmdl.io/1.3.0/material.min.js'}
 = stylesheet_link_tag "user_show", :media => "all"
-
-.all
-  %h1 K-Project practice
-  %li
-    userid : #{@user[:userid]}
-  %li
-    username : #{@user[:username]}
-  %li
-    comment : #{@user[:comment]}
-  %li
-    password:#{@user[:password]}
+%body
+  .all
+    .demo-card-wide.mdl-card.mdl-shadow--2dp
+      .mdl-card__title
+        .mdl-card__title-text
+          User Profile
+      .mdl-card__supporting-text
+        %ul.demo-list.mdl-list
+          %li.mdl-list__item
+            %span.mdl-list__item-primary-content
+              Username : #{@user[:username]}
+          %li.mdl-list__item
+            %span.mdl-list__item-primary-content
+              Comment : #{@user[:comment]}
+      .mdl-card__actions.mdl-card--border
+        %a.mdl-button.mdl-button--colored.mdl-js-ripple-effect.mdl-js-button{:href=>"http://localhost:3000"}
+          Go back
