--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -29,9 +29,9 @@
           %a{:class=>'mdl-navigation__link leftbar',:href=>"http://localhost:3000/signup"} Signup
           %a{:class=>'mdl-navigation__link leftbar',:href=>"http://localhost:3000/login"} Login
 
-    %main{:class=>'mdl-layout__content' }
+    %main{:class=>'mdl-layout__content middlekeidarou' }
       .page-content
         .titletext
-          .inlinetitletext Just Give Me Your Coding Skills.
+          .inlinetitletext Hello World!
           %br
-          .subtitletext お前のコーディングスキルをくれ。
+          .subtitletext こんにちは世界！
