--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,24 +2,35 @@
   /*  background: url('/images/Senses-EP.jpg')center/cover;
 */
 }
-body{
-  background-color: #aa6a0a;
+
+body {
+  background-color: #a6d9d0;
 }
+
 .mdl-layout__header {
   height: 7%;
   background-color: #090909;
 }
-.mdl-layout__content{
-    background-color: #a6d9d0;
+
+.mdl-layout__content {
+  z-index: 3;
+  background-color: #a6d9d0;
+  overflow: visible;
 }
+
+.middlekeidarou {
+  top: 40vh;
+  overflow: visible;
+}
+
 .titletext {
   height: 800px;
-  display: table-cell;
+  text-align: center;
   vertical-align: middle;
 }
 
 .inlinetitletext {
-  font-size: 400%;
+  font-size: 5vw;
   text-align: center;
   font-weight: bolder;
   color: #000000;
