--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,7 +1,7 @@
 html, body {
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
 }
 
@@ -18,7 +18,7 @@ html, body {
   top: 0;
   left: 0;
   position: relative;
-  height: 100%;
+  height: 90%
 }
 
 #toppage p {
