--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -2,37 +2,45 @@ body {
   position: relative;
   height: 100%;
   width: 100%;
-}
-
-.demo-card-wide {
-  height: 30vh;
-  width: 30vw;
-}
-
-.demo-card-wide>.mdl-card__title {
-  color: #fff;
-  height: 70px;
-  background-color: indigo;
-}
-
-.mdl-card__title-text {
-  position: relative;
-  font-size: 2rem;
-}
-
-.mdl-card {
-  margin-left: auto;
-  margin-right: auto;
+  background: #fafafa;
 }
 
 .allchange {
   text-align: center;
   position: absolute;
-  top: 0;
+  top: 20vh;
   right: 0;
   bottom: 0;
   left: 0;
   margin: auto;
-  height: 100%;
+  overflow: visible;
   width: 100%;
+  font-family: 'Roboto Mono', monospace;
+}
+
+.mdl-textfield {
+  width: 40vw;
+  height: 10vh;
+}
+
+.mdl-textfield__label {
+  font-size: 1.8rem;
+  overflow: visible;
+  height: 3.55rem;
+}
+
+.titleText {
+  font-size: 5rem;
+}
+
+.navbar-brand {
+  font-size: 2rem;
+  color: #000000;
+  left: 2%;
+  height: 0;
+  position: relative;
+}
+
+.buttonSize {
+  font-size: 1.5rem;
 }
