--- a/app/views/user_show/login.html.haml
+++ b/app/views/user_show/login.html.haml
@@ -4,24 +4,27 @@
 %link{:rel => 'stylesheet', :href => 'https://fonts.googleapis.com/icon?family=Material+Icons'}
 %link{:rel => 'stylesheet', :href => 'https://code.getmdl.io/1.3.0/material.indigo-pink.min.css'}
 %script{:defer=>'defer',:src=>'https://code.getmdl.io/1.3.0/material.min.js'}
-/%link{:rel=>'stylesheet',:href=>'/assets/stylesheets/login.css'}
+%link{:rel=>'stylesheet',:href=>'https://fonts.googleapis.com/css?family=Roboto+Mono'}
+%link{:href => "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css",  :rel => "stylesheet"}
 = stylesheet_link_tag "login", :media => "all"
 %html
   %body
+    %a.navbar-brand{:href=>'./'}
+      SpiderChat
     .allchange
-      .demo-card-wide.mdl-card.mdl-shadow--2dp
-        .mdl-card__title
-          .mdl-card__title-text
-            Login
-        .mdl-card__supporting-text
-          Well come back!!
+      .titleText
+        Login
+      %br
+      %br
+      %br
+      %form{:action=>'#'}
         = form_for @user, :url => {:controller => 'user_show', :action => 'logincheck'} do |f|
-          .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-            = f.text_field :username,:class=>'mdl-textfield__input',:type => "text",:id=>'un'
-            %label{:class=>'mdl-textfield__label'} Username...
+          .mdl-textfield.mdl-js-textfield
+            = f.text_field :username,:class=>'mdl-textfield__input',:type => "text"
+            %label.mdl-textfield__label Username...
           %br
-          .mdl-containerflex.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+          .mdl-textfield.mdl-js-textfield
             = f.password_field :password,:class=>'mdl-textfield__input',:type => "password",:minlength=>'6',:maxlength=>'30'
-            %label{:class=>'mdl-textfield__label'} Password...
+            %label.mdl-textfield__label Password...
           %br
-          = f.submit 'Login',:class=>'mdl-button.mdl-js-button mdl-button--raised'
+          = f.submit 'Login',:class=>'mdl-button--raised buttonSize'
